fixed z-index

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ ul li {
   display: none;
   opacity: 0;
   visibility: hidden;
-  z-index: -10;
+  z-index: -1;
   width: inherit;
 }
 
@@ -132,9 +132,11 @@ input {
   color: rgba(198,175,163,0.3);
   font-family: 'Quicksand Bold', sans-serif;
 }
+
 @media only screen and (max-width: 1400px) {
     form {
       top: 25%;
       width:300px;
+      z-index: -5;
     }
 }
